Set login-container margin to 0 to fix white space at bottom

--- a/src/Assets/App.css
+++ b/src/Assets/App.css
@@ -54,6 +54,8 @@ html, body {
 .login-container {
   background: rgb(43,56,107);
   background: radial-gradient(circle, rgba(43,56,107,1) 35%, rgba(69,89,172,1) 100%);
+  height: 100vh !important;
+  margin: 0 !important;
 }
 
 .login-logo {
